# curves_demo

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp
include/curves/: Circle.hpp  Curve.hpp  Ellipse.hpp  Helix3D.hpp  Vec3.hpp  export.hpp
src/: Circle.cpp  Ellipse.cpp  Helix3D.cpp
